# Media-Prep-Platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CONSTITUTION.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  project_rules.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/: pull_request_template.md
config/: LED_15360x2160.yaml  LED_6400x2000.yaml  LED_7680x2160.yaml  encoder_backends.yaml  output_spec.yaml  project_rules.yaml
docs/: README.md
mediaqc/: __init__.py  branding.py  cli.py  dashboard.py  database.py  deep_analysis.py  diagnostics.py  editions.py  hash_check.py  models.py  probe.py  profiles.py  report.py  rules.py  scanner.py  updater.py  validation_engine.py
profiles/: Disguise.yaml  LED_4K.yaml  LED_8K.yaml  Millumin.yaml  Notch.yaml  Pixera.yaml  TouchDesigner.yaml
scripts/: install_loom_local_app.sh  launch_loom_macos.sh  local_live_update.sh
tests/: test_adobe_ame_backend.py  test_canvas.py  test_cli_stability.py  test_codec_profiles.py  test_dashboard.py  test_database.py  test_deep_analysis.py  test_diagnostics_updater.py  test_edid.py  test_editions.py  test_enterprise_api.py  test_enterprise_auth.py  test_enterprise_graphql_webhooks.py  test_enterprise_storage_notifications.py  test_ffmpeg_runner.py  test_gui_queue.py  test_hash_check.py  test_integrity.py  test_jobs.py  test_manifest.py  test_manifest_processing.py  test_packaging_tools.py  test_pdf_report.py  test_pipeline.py  test_presets.py  test_profiles.py  test_report.py  test_rules.py  (+3 more)
(+330 files in other folders)
